--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,18 +6,13 @@
   <meta name="viewport" content="width=device-width,initial-scale =1,maximum-scale=1,user-scalable=no" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <%= include_gon %>
-  <%= stylesheet_link_tag    "application-all", :media => "all" %>
-  <%= stylesheet_link_tag    "application-mobile", :media => "all and (max-width: 969px)" %>
-  <%= stylesheet_link_tag    "application-print", :media => "print" %>
+  <%= stylesheet_link_tag    "application", :media => "all" %>
 
   <style>
     body {
      background:transparent url('<%= ENV["BACKGROUND_IMAGE"] %>') repeat 0 100%;
     }
   </style>
-  <!--[if lte IE 8]>
-    <%= stylesheet_link_tag    "application-ie", :media=> "all" %>
-  <![endif]-->
   <%= javascript_include_tag "application" %>
 
   <%= csrf_meta_tags %>
