--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
     <h3 class="welcome">Welcome To</h3>
     <h1 class="home-modal"><%= ENV["OFFICIAL_SITE_TITLE"] %></h1>
     <p class="call">
-      <%= "Find answers to your questions about City of #{ENV["OFFICIAL_CITY_NAME"]} services." %>
+      <%= "Find answers to your questions about the City of #{ENV["OFFICIAL_CITY_NAME"]}." %>
     </p>
 
     <div class="ribbon-front">
