--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -5,7 +5,7 @@
       <%= f.text_field :title %><br />
 
       <%= f.label :content_main, "Answer" %>:
-      <%= f.text_area :content_main %><br />
+      <%= f.bootsy_area :content_main %><br />
 
       <%= f.label :author_name %>:
       <%= f.text_field :author_name %><br />
