--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,42 +1,36 @@
-<div class="page-container article">
-  <div class="row">
-    <div class="span9">
-      <div class="main-content">
-        <div class="header">
-          <%= content_tag(:h1, @article.title ) %>
-        </div>
-        <div class="content-text">
-          <% if @article.content_main.present? %>
-            <div class="quick_top">
-              <%= markdown_to_html(@article.content_main) %>
-            </div>
-          <% end %>
-        </div>
-        <% if @article.content_main_es.present? %>
-          <div class="header">
-            <%= content_tag(:h1, @article.title_es ) %>
-          </div>
-          <div class="content-text">
-            <div class="quick_top">
-              <%= markdown_to_html(@article.content_main_es) %>
-            </div>
-          </div>
-        <% end %>
-        <% if @article.content_main_cn.present? %>
-          <div class="header">
-            <%= content_tag(:h1, @article.title_cn ) %>
-          </div>
-          <div class="content-text">
-            <div class="quick_top">
-              <%= markdown_to_html(@article.content_main_cn) %>
-            </div>
+<div class="row">
+  <div class="span11 center">
+    <div class="main-content">
+      <div class="header">
+        <%= content_tag(:h1, @article.title ) %>
+      </div>
+      <div class="content-text">
+        <% if @article.content_main.present? %>
+          <div class="quick_top">
+            <%= markdown_to_html(@article.content_main) %>
           </div>
         <% end %>
       </div>
-    </div><!-- /span9 -->
-
-    <div class="span3">
-      <%= render :partial => 'shared/articles_sidebar' %>
-    </div><!-- /span3 -->
+      <% if @article.content_main_es.present? %>
+        <div class="header">
+          <%= content_tag(:h1, @article.title_es ) %>
+        </div>
+        <div class="content-text">
+          <div class="quick_top">
+            <%= markdown_to_html(@article.content_main_es) %>
+          </div>
+        </div>
+      <% end %>
+      <% if @article.content_main_cn.present? %>
+        <div class="header">
+          <%= content_tag(:h1, @article.title_cn ) %>
+        </div>
+        <div class="content-text">
+          <div class="quick_top">
+            <%= markdown_to_html(@article.content_main_cn) %>
+          </div>
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
