--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,16 +1,18 @@
-<div class="page-container">
+<div class="page-container span12 center">
   <div class="row">
     <div class="span9">
       <div class="main-content">
-        <div class="header"><h1>All Articles</h1></div>
-        <ul>
+        <div class="header"><h1>All Questions & Answers</h1></div>
+        <ul class="categories">
           <% @categories.each do |category| %>
             <li class="category-listing">
               <%= content_tag(:h1, link_to(category.name,category))%>
                 <ul class="category-articles">
                   <% category.articles.by_access_count.each do |article| %>
-                    <% next unless article.published? %>
-                      <li class="category-article"><%= content_tag( :h3, link_to( article.title, article_path(article) ) ) %></li>
+                      <li class="category-article">
+                        <%= content_tag(:h2, link_to( article.title, article_path(article) ) ) %>
+                        <p class="preview"><%= markdown_to_html(truncate(article.content_main, length: 200)) %></p>
+                      </li>
                   <% end -%>
                 </ul>
             </li>
@@ -22,4 +24,4 @@
       <%= render :partial => 'shared/categories_sidebar' %>
     </div><!-- /span3 -->
   </div>
-</div> 
+</div>
