--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -31,6 +31,7 @@
           </div>
         </div>
       <% end %>
+      <%= link_to "edit", edit_article_path(@article) %>
     </div>
   </div>
 </div>
