--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,7 +11,6 @@
                   <% category.articles.by_access_count.each do |article| %>
                       <li class="category-article">
                         <%= content_tag(:h2, link_to( article.title, article_path(article) ) ) %>
-                        <p class="preview"><%= markdown_to_html(truncate(article.content_main, length: 200)) %></p>
                       </li>
                   <% end -%>
                 </ul>
@@ -21,7 +20,7 @@
       </div>
     </div>
     <div class="span3">
-      <%= render :partial => 'shared/categories_sidebar' %>
-    </div><!-- /span3 -->
+      <%= render partial: 'shared/categories_sidebar' %>
+    </div>
   </div>
 </div>
