--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,46 +1,19 @@
-<div class="page-container">
+<div class="page-container span12 center">
   <div class="row">
     <div class="span9">
       <div class="main-content">
-        <div class="header">
-          <h1><%= @category.name %></h1>
-        </div>
-        <% if @category.description.present? %>
-          <p><%= @category.description %></p>
-        <% end %>
-        <ul>
+        <div class="header"><h1><%= @category.name %></h1></div>
+        <ul class="category-articles category-details">
           <% @category.articles.by_access_count.each do |article| %>
-            <% next unless article.published? %>
-              <li class="article-listing">
-                <%= content_tag( :h2, link_to( article.title, article) ) %>
-                <p class="preview"><%= article.preview %></p>
-                <div class="other-langs">
-              <% if article.title_es.present? %>
-                <div class="preview-es">
-                  <img src="/assets/es.gif" title="This content is also in Spanish" />
-                    <%= content_tag(:h3, link_to(article.title_es,article))%>
-                      <p class="preview"><%= article.preview_es %></p>
-                </div>
-              <% end %>
-              <% if article.title_cn.present? %>
-                <div class="preview-cn">
-                  <img src="/assets/cn.gif" title="This content is also in Chinese" />
-                  <%= content_tag(:h3, link_to(article.title_cn,article))%>
-                  <p class="preview"><%= article.preview_cn %></p>
-                </div>
-              <% end %>
-            </div>
-            </li>
-            
+              <li class="category-article">
+                <%= content_tag(:h2, link_to( article.title, article_path(article) ) ) %>
+              </li>
           <% end -%>
-
         </ul>
       </div>
-    </div><!-- /span9 -->
-
+    </div>
     <div class="span3">
-      <%= render :partial => 'shared/categories_sidebar' %>
-    </div><!-- /span3 -->
-
-  </div><!-- /row -->
-</div><!-- /page-container -->
+      <%= render partial: 'shared/categories_sidebar' %>
+    </div>
+  </div>
+</div>
