Articles must have a category. Renamed form submit button to be generic.

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -13,5 +13,5 @@
 
   <%= f.label :author_link, "Author Link (optional)" %>
   <%= f.text_field :author_link %><br />
-  <%= f.submit "Add" %>
+  <%= f.submit "Submit" %>
 <% end %>
