--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,45 +1,39 @@
-<div class="page-container search">
+
+<div class="page-container span12 center">
   <div class="row">
     <div class="span9">
       <div class="main-content">
-        <div class="header">
-          <h1>Search results for: "<strong><%=@query%></strong>"</h1>
-          <br/>
-
-          <% if @results.empty? %>
-            <p>Sorry, no results found for "<%=@query%>".  Please try rephrasing your search terms.</p>
-          <% else %>
-            <ul>
-              <% @results.each do |article| %>
-                <% next unless article.published? %>
-                  <li class="article-listing">
-                    <%= content_tag( :h2, link_to( article.title, article_path(article) ) ) %>
-                    <p class="preview"><%= article.preview %></p>
-                      <div class="other-langs">
-                          <% if article.title_es.present? %>
-                          <div class="preview-es">
-                            <img src="/assets/es.gif" title="This content is also in Spanish" />
-                            <%= content_tag(:h3, link_to(article.title_es,article))%>
-                            <p class="preview"><%= article.preview_es %></p>
-                          </div>
-                          <% end %>
-                          <% if article.title_cn.present? %>
-                          <div class="preview-cn">
-                            <img src="/assets/cn.gif" title="This content is also in Chinese" />
-                            <%= content_tag(:h3, link_to(article.title_cn,article))%>
-                            <p class="preview"><%= article.preview_cn %></p>
-                          </div>
-                          <% end %>
-                        </div>
-                  </li>
-                <% end %>
-            </ul>
-          <% end -%>
-        </div>
+        <div class="header"><h1>Search results for: "<strong><%=@query%></strong>"</h1></div>
+        <% if @results.empty? %>
+          <p>Sorry, no results found for "<%=@query%>".  Please try rephrasing your search terms.</p>
+        <% else %>
+          <ul>
+            <% @results.each do |article| %>
+              <% next unless article.published? %>
+              <li class="article-listing">
+                <%= content_tag( :h2, link_to( article.title, article_path(article))) %>
+                <div class="other-langs">
+                  <% if article.title_es.present? %>
+                  <div class="preview-es">
+                    <img src="/assets/es.gif" title="This content is also in Spanish" />
+                    <%= content_tag(:h3, link_to(article.title_es,article))%>
+                  </div>
+                  <% end %>
+                  <% if article.title_cn.present? %>
+                  <div class="preview-cn">
+                    <img src="/assets/cn.gif" title="This content is also in Chinese" />
+                    <%= content_tag(:h3, link_to(article.title_cn,article))%>
+                  </div>
+                  <% end %>
+                </div>
+              </li>
+            <% end %>
+          </ul>
+        <% end -%>
       </div>
     </div>
     <div class="span3">
-      <%= render :partial => 'shared/categories_sidebar' %>
-    </div><!-- /span3 -->
+      <%= render partial: 'shared/categories_sidebar' %>
+    </div>
   </div>
 </div>
