--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,6 +11,7 @@
     <div class="ribbon-front">
       <div class="triangle-l"></div>
       <div class="triangle-r"></div>
+      <div id="search-info">Search in English/Busque en Español</div>
       <div class="ribbon-wrapper">
         <form id="search" action="search" name="search" method="get">
           <input type="text" name="q" id="query" title='query' placeholder="Try parking, jobs, or permits...">
