Change background picture back to original

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
 
     <%= stylesheet_link_tag "application", :media => "all" %>
 
+    <style>
+      body {
+       background:transparent url('<%= ENV["BACKGROUND_IMAGE"] %>') repeat 0 100%;
+      }
+    </style>
+
     <!-- For third-generation iPad with high-resolution Retina display: -->
     <!-- Size should be 144 x 144 pixels -->
     <%= favicon_link_tag 'apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144' %>
